# fastapi-school

./: .env.example  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
src/: main.py
src/core/: database.py  exceptions.py  settings.py
src/models/: base.py  student.py
src/routes/: student.py
src/schemas/: alumni.py  base.py  student.py
src/usecases/: student.py
tests/: conftest.py  settings.py
tests/core/: settings.py
tests/factories/: student.py
tests/routes/: test_student.py
tests/schemas/: factory.py  test_alumni.py  test_student.py
tests/usecases/: test_student.py
